Set widths and aligned certain objects on page Issue #3

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
+div.main
+{
+  padding:10em;
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+  width:1300em;
+  text-align:center;
+}
 
+div.startContainer
+{
+  border:1px solid black;
+  border-radius:5px;
+  text-align:center;
+  vertical-align:middle;
+}
+
+div.scoresContainer
+{
+  border:1px solid black;
+  border-radius:5px;
+  text-align:center;
+  vertical-align:middle;
+}
+
+div.footer
+{
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+}
